--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/fishandchips.html">Fish and Chips</a>
+        <ul>
+            <li><a href="recipes/fishandchips.html">Fish and Chips</a></li>
+            <li><a href="recipes/sweetandsourchicken.html">Sweet and Sour Chicken</a></li>
+        </ul>
     </body>
 </html>
