add image for beef brisket

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/fishandchips.html">Fish and Chips</a></li>
             <li><a href="recipes/sweetandsourchicken.html">Sweet and Sour Chicken</a></li>
+            <li><a href="recipes/beefbrisket.html">Beef Brisket</a></li>
         </ul>
     </body>
 </html>
