add styles to index
add css file
linked css file to all pages
add style to index
add img to index

--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles/styles.css">
         <title>Odin Recipes</title>
     </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/fishandchips.html">Fish and Chips</a></li>
-            <li><a href="recipes/sweetandsourchicken.html">Sweet and Sour Chicken</a></li>
-            <li><a href="recipes/beefbrisket.html">Beef Brisket</a></li>
-        </ul>
+    <body class="homepage">
+        <h1 class="homepage-title">Odin Recipes</h1>
+        <div class="thumbnail-back">
+            <img class="thumbnail" src="images/fishandchips.jpg" alt="Fish and Chips">
+            <a class="thumbnail-link" href="recipes/fishandchips.html">Fish and Chips</a>
+        </div>
+        <div class="thumbnail-back">
+            <img class="thumbnail" src="images/sweetandsourchicken.jpg" alt="Sweet and Sour Chicken">
+            <a class="thumbnail-link" href="recipes/sweetandsourchicken.html">Sweet and Sour Chicken</a>
+        </div>
+        <div class="thumbnail-back">
+            <img class="thumbnail" src="images/beefbrisket.jpg" alt="Beef Brisket">
+            <a class="thumbnail-link" href="recipes/beefbrisket.html">Beef Brisket</a>
+        </div>
     </body>
 </html>
