add styles to all 3 recipes
changed each webpage to link with css file
added styles to all content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Odin Recipes</title>
     </head>
 
-    <body class="homepage">
+    <body class="bg-color">
         <h1 class="homepage-title">Odin Recipes</h1>
         <div class="thumbnail-back">
             <img class="thumbnail" src="images/fishandchips.jpg" alt="Fish and Chips">
