--- a/recipes/beefbrisket.html
+++ b/recipes/beefbrisket.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
         <title>Beef Brisket</title>
     </head>
-    <body>
-        <a href="../index.html">Home</a>
-        <h1>Beef Brisket</h1>
-        <img src="../images/beefbrisket.jpg" alt="Beef Brisket" height="800" width="1200">
+
+    <body class="bg-color">
+        <a class="home-link" href="../index.html">Home</a>
+        <h1 class="recipe-title">Beef Brisket</h1>
+        <img class="recipe-image" src="../images/beefbrisket.jpg" alt="Beef Brisket" height="800" width="1200">
         <h2>Description</h2>
         <p> The brisket is seared in a hot skillet, then topped with sliced onions and garlic, 
             then braised for about 6 hours for a tender, juicy roast. It's so worth the wait!
