--- a/recipes/sweetandsourchicken.html
+++ b/recipes/sweetandsourchicken.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
         <title>Sweet and Sour Chicken</title>
     </head>
     
-    <body>
-        <a href="../index.html">Home</a>
-        <h1>Sweet and Sour Chicken</h1>
-        <img src="../images/sweetandsourchicken.jpg" alt="Sweet and Sour Chicken" height="871" width="1306.5">
+    <body class="bg-color">
+        <a class="home-link" href="../index.html">Home</a>
+        <h1 class="recipe-title">Sweet and Sour Chicken</h1>
+        <img class="recipe-image" src="../images/sweetandsourchicken.jpg" alt="Sweet and Sour Chicken" height="871" width="1306.5">
         <h2>Description</h2>
         <p>This sweet and sour chicken recipe makes crispy fried chicken pieces with 
             pineapple and bell pepper served with a homemade tangy and sweet sauce.
