--- a/recipes/fishandchips.html
+++ b/recipes/fishandchips.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
         <title>Fish and Chips</title>
     </head>
 
-    <body>
-        <a href="../index.html">Home</a>
-        <h1>Fish and Chips</h1>
-        <img src="../images/fishandchips.jpg" alt="Fish and Chips" height="646" width="1148">
+    <body class="bg-color">
+        <a class="home-link" href="../index.html">Home</a>
+        <h1 class="recipe-title">Fish and Chips</h1>
+        <img class="recipe-image" src="../images/fishandchips.jpg" alt="Fish and Chips" height="646" width="1148">
         <h2>Description</h2>
         <p>Fish and chips is a traditional British dish consisting of fried fish and thinly sliced fried potatoes. 
             The potatoes are called "French fries" in the U.S. and "chips" in the U.K. 
